@@ -38,12 +38,13 @@ test.Function <- function(){
 
 test.Function.variadic <- function(){
 	if( Rcpp:::canUseCXX0X() ){
-		funx <- cfunction(signature(x="function", y = "numeric"), '
+		funx <- cfunction(signature(x="function", y = "ANY"), '
 		Function sort(x) ;
 		return sort( y, Named("decreasing", true) ) ;
 		', Rcpp=TRUE, verbose=FALSE, includes = "using namespace Rcpp;" )
 		checkEquals( funx( sort, sample(1:20) ), 
 			20:1, msg = "calling function" )
+		checkException( funx(sort, sort), msg = "Function, R error -> exception" )
 	}
 }
 
